# ai-governance-mcp

./: .contextignore  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  COMPLETION-CHECKLIST.md  COMPLIANCE-REVIEW.md  Dockerfile  EXECUTION-FRAMEWORK.md  FRAMEWORK-EVALUATION.md  GATE-PLAN.md  GATE-SPECIFY.md  INFLUENCES.md  LEARNING-LOG.md  LICENSE  LICENSE-CONTENT  MULTI-AGENT-ENHANCEMENT-REPORT.md  OPERATIONS.md  PROJECT-MEMORY.md  README.md  RELEASE.md  SBOM.md  SECURITY.md  SESSION-STATE.md  SPECIFICATION.md  ai-governance-mcp-specification-v4.md  claude.md  docker-compose.yml  pyproject.toml
.claude/: plan-template.md  settings.json
.github/: dependabot.yml
archive/: GATE-IMPLEMENT.md  GATE-PLAN.md  GATE-TASKS.md  ai-governance-mcp-specification-v2.md  ai-governance-mcp-specification-v3.md
cache/: coding-C1.md  coding-C2.md  coding-C3.md  coding-P1.md  coding-P2.md  coding-P3.md  coding-P4.md  coding-Q1.md  coding-Q2.md  coding-Q3.md  coding-Q4.md  coding-Q5.md  meta-C1.md  meta-C2.md  meta-C3.md  meta-C4.md  meta-C5.md  meta-C6.md  meta-C7.md  meta-G1.md  meta-G10.md  meta-G2.md  meta-G3.md  meta-G4.md  meta-G5.md  meta-G6.md  meta-G7.md  meta-G8.md  meta-G9.md  meta-MA1.md  meta-MA2.md  meta-MA3.md  meta-MA4.md  meta-MA5.md  meta-MA6.md  meta-O1.md  meta-O2.md  meta-O3.md  meta-O4.md  meta-O5.md  (+25 more)
documents/: .citation-allowlist  .public-allowlist  ai-coding-domain-principles-v2.1.md  ai-coding-domain-principles-v2.2.1.md  ai-coding-domain-principles-v2.2.md  ai-coding-domain-principles-v2.3.0.md  ai-coding-domain-principles-v2.3.1.md  ai-coding-domain-principles-v2.3.2.md  (+193 more)
(+357 files in other folders)
